增加特约用户上传商品的功能。

--- a/MsWeb/Project_Readme.html
+++ b/MsWeb/Project_Readme.html
@@ -107,7 +107,7 @@
             <ul>
                 <li>用于记录你的 Web API 的<a href="http://go.microsoft.com/fwlink/?LinkID=615543">帮助页</a></li>
                 <li>使用 <a href="http://go.microsoft.com/fwlink/?LinkID=615519">Bootstrap</a> 进行主题定位</li>
-                <li><a href="http://go.microsoft.com/fwlink/?LinkID=320957">身份验证</a>，如果选择此项，则将显示如何注册和登录</li>
+                <li><a href="http://go.microsoft.com/fwlink/?LinkID=320957">身份验证</a>，如果选择此项，则将显示如何注册和登陆</li>
                 <li>使用 <a href="http://go.microsoft.com/fwlink/?LinkID=320958">NuGet</a> 管理的 ASP.NET 功能</li>
             </ul>
         </div>
